--- a/Notebooks/technology_matrix.ipynb
+++ b/Notebooks/technology_matrix.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,12 +39,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#path_to_exiobase_unzipped_folder = 'my_own_path/IOT_2011_pxp/'\n",
-    "path_to_exiobase_unzipped_folder = 'C://Users/Maxime/Desktop/Thesis/Bdd/EXIOBASE/monetary/exiobase3.4/IOT_2011_pxp/'\n",
+    "path_to_exiobase_unzipped_folder = 'my_own_path/exiobase3.4/IOT_2011_pxp/'\n",
     "io = pymrio.parse_exiobase3(path_to_exiobase_unzipped_folder)"
    ]
   },
@@ -57,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -113,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -170,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -186,7 +185,7 @@
        "Name: (QC, grid_mix), dtype: float64"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -277,7 +276,7 @@
        "Name: (QC, grid_mix), Length: 201, dtype: float64"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -313,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -386,7 +385,7 @@
        "Name: (QC, grid_mix), Length: 201, dtype: float64"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,28 +405,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For international trade, we could not separate commodities bought from/by Quebec from Canada. We thus assume that international trade will only occur with Canada."
+    "For international trade, we could not separate commodities bought from/by Quebec from Canada. We thus assume that international trade will only occur with Quebec."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "extended_exio.loc['QC',io.get_regions()]=0"
+    "extended_exio.loc['CA',io.get_regions()]=0"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Unfortunately, we did not find any data on interprovince trade. We thus assume that there is no interprovince trade. All quebecers will thus not be able to buy Canadian products in this IO table. And, to make matters worst, since international trade is only connected to Canada, Quebecers will **only** buy products from Quebec. Remember though, that all technologies are identical between our version of Quebec's economy and Canada's economy as a whole albeit with a different grid mix."
+    "Unfortunately, we did not find any data on interprovince trade. We thus assume that there is no interprovince trade. All quebecers will thus not be able to buy Canadian products in this IO table."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
