Abandon .pickle for .npy

--- a/Notebooks/final_demand.ipynb
+++ b/Notebooks/final_demand.ipynb
@@ -22,7 +22,6 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import pickle\n",
     "import pymrio"
    ]
   },
@@ -35,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -49,17 +48,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Load the technology matrix create in the technology_matrix.ipynb notebook"
+    "Load the technology matrix created in the technology_matrix.ipynb notebook"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('one_matrix_to_rule_them_all.pickle','rb') as f:\n",
-    "    A = pd.read_pickle(f)"
+    "A = np.load('one_matrix_to_rule_them_all.npy')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "# the storage in npy does not include indexes\n",
+    "index = pd.MultiIndex.from_product([io.get_regions().tolist()+['QC'],io.get_sectors()],names=['region','sector'])\n",
+    "index = index.tolist()+[('QC','grid_mix')]\n",
+    "A = pd.DataFrame(A, index=index, columns=index)"
    ]
   },
   {
@@ -71,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -89,11 +101,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "list_quintile =['1st_quintile','2nd_quintile','3rd_quintile','4th_quintile','5th_quintile']\n",
+    "list_quintile = ['1st_quintile','2nd_quintile','3rd_quintile','4th_quintile','5th_quintile']\n",
     "\n",
     "commodities = io.get_sectors().tolist()\n",
     "commodities.append('grid_mix')\n",
@@ -127,19 +139,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
+    "total_Y = pd.DataFrame(0,index=A.index,columns=list_quintile)\n",
+    "\n",
     "for quintile in list_quintile:\n",
     "    consumption_quintile = {}\n",
     "    for commodity in commodities:\n",
     "        consumption_quintile[commodity] = 0\n",
     "    for product in df.index:\n",
     "        if product == 'Viande':\n",
-    "            list_viande = df.loc[product, ['EXIOBASE sector(s)','Unnamed: 6','Unnamed: 7','Unnamed: 8']].tolist()\n",
+    "            list_viande = ['Products of meat cattle','Products of meat pigs','Products of meat poultry','Meat products nec']\n",
     "            meat_vector = io.Y.loc[:,('CA','Final consumption expenditure by households')].groupby('sector').sum().loc[list_viande]/io.Y.loc[:,('CA','Final consumption expenditure by households')].groupby('sector').sum().loc[list_viande].sum()*df.loc[product,quintile]\n",
     "            for meat in meat_vector.index:\n",
     "                consumption_quintile[meat] = meat_vector[meat]\n",
@@ -163,19 +177,19 @@
     "            pass\n",
     "        else:\n",
     "            try:\n",
-    "                if np.isnan(df.loc[product, 'Unnamed: 6']):\n",
+    "                if np.isnan(df.loc[product, df.columns[-3]]):\n",
     "                    consumption_quintile[df.loc[product, 'EXIOBASE sector(s)']] += df.loc[product, quintile]\n",
     "            except:\n",
-    "                # if it pops an error it means there is a sector in Unnamed: 3, meaning we have to split the purchases\n",
+    "                # if it pops an error it means we have to split the purchases\n",
     "                try:\n",
-    "                    if np.isnan(df.loc[product, 'Unnamed: 7']):\n",
+    "                    if np.isnan(df.loc[product, df.columns[-2]]):\n",
     "                        consumption_quintile[df.loc[product, 'EXIOBASE sector(s)']] += df.loc[product, quintile]/2\n",
-    "                        consumption_quintile[df.loc[product, 'Unnamed: 6']] += df.loc[product, quintile]/2\n",
+    "                        consumption_quintile[df.loc[product, df.columns[-3]]] += df.loc[product, quintile]/2\n",
     "                except:\n",
-    "                    if np.isnan(df.loc[product, 'Unnamed: 8']):\n",
+    "                    if np.isnan(df.loc[product, df.columns[-1]]):\n",
     "                        consumption_quintile[df.loc[product, 'EXIOBASE sector(s)']] += df.loc[product, quintile]/3\n",
-    "                        consumption_quintile[df.loc[product, 'Unnamed: 6']] += df.loc[product, quintile]/3\n",
-    "                        consumption_quintile[df.loc[product, 'Unnamed: 7']] += df.loc[product, quintile]/3\n",
+    "                        consumption_quintile[df.loc[product, df.columns[-3]]] += df.loc[product, quintile]/3\n",
+    "                        consumption_quintile[df.loc[product, df.columns[-2]]] += df.loc[product, quintile]/3\n",
     "    \n",
     "    # add Canadian data for waste management triggered by households consumption\n",
     "    waste_treatment_sectors = [i[1] for i in io.A.index if ('waste for treatment' in i[1] or 'landfill' in i[1] or 'sludge' in i[1]) and i[0] == 'CA']\n",
@@ -202,16 +216,17 @@
     "    df_to_add = df_to_add.set_index(pd.MultiIndex.from_product([['QC'],commodities]))\n",
     "    Y = pd.concat([Y, df_to_add])\n",
     "    Y.loc['CA'] = 0\n",
+    "    \n",
+    "    total_Y[quintile] = Y\n",
     "\n",
-    "    with open('final_demand_'+str(quintile)+'.pickle','wb') as f:\n",
-    "        pickle.dump(Y, f)"
+    "np.save('final_demand',total_Y)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The resulting final demand vector for each of the quintiles is stored in a pickle."
+    "The resulting final demand vector is stored in a .npy format."
    ]
   }
  ],
