Abandon .pickle for .npy

--- a/Notebooks/footprint_Quebec.ipynb
+++ b/Notebooks/footprint_Quebec.ipynb
@@ -24,8 +24,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# path_to_exiobase_unzipped_folder = 'my_own_path/exiobase3.4/IOT_2011_pxp/'\n",
-    "path_to_exiobase_unzipped_folder = 'C://Users/Maxime/Desktop/Thesis/Bdd/EXIOBASE/monetary/exiobase3.4/IOT_2011_pxp/'\n",
+    "path_to_exiobase_unzipped_folder = 'my_own_path/exiobase3.4/IOT_2011_pxp/'\n",
     "io = pymrio.parse_exiobase3(path_to_exiobase_unzipped_folder)"
    ]
   },
@@ -44,7 +43,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymrio.core.mriosystem.IOSystem at 0x1dfb3512e10>"
+       "<pymrio.core.mriosystem.IOSystem at 0x166275c0cc0>"
       ]
      },
      "execution_count": 3,
@@ -115,13 +114,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "C = pd.read_csv('C://Users/Maxime/Desktop/Thesis/Articles/Correcting remaining truncations in hybrid LCA database compilation/Datasets/C_exio_IW.csv')\n",
+    "C = pd.read_csv('path_to_lonely_mountain/C_exio_IW.csv')\n",
     "C = C.set_index('Unnamed: 0')\n",
     "C = C.reindex(S.index,axis=1).fillna(0)"
    ]
@@ -135,21 +134,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('one_matrix_to_rule_them_all.pickle','rb') as f:\n",
-    "    A = pd.read_pickle(f)\n",
-    "    \n",
-    "with open('final_demand_1st_quintile.pickle','rb') as f:\n",
-    "    Y = pd.read_pickle(f)\n",
-    "other_quintiles = ['2nd_quintile','3rd_quintile','4th_quintile','5th_quintile']\n",
-    "for quintile in other_quintiles:\n",
-    "    with open('final_demand_'+str(quintile)+'.pickle','rb') as f:\n",
-    "        df = pd.read_pickle(f)\n",
-    "    Y = pd.concat([Y, df],axis=1)\n",
-    "Y.columns = ['1st_quintile','2nd_quintile','3rd_quintile','4th_quintile','5th_quintile']"
+    "A = np.load('one_matrix_to_rule_them_all.npy')\n",
+    "index = pd.MultiIndex.from_product([io.get_regions().tolist()+['QC'],io.get_sectors()],names=['region','sector'])\n",
+    "index = index.tolist()+[('QC','grid_mix')]\n",
+    "A = pd.DataFrame(A, index=index, columns=index)\n",
+    "\n",
+    "Y = pd.DataFrame(np.load('final_demand.npy'),index=A.index, columns=['1st_quintile','2nd_quintile','3rd_quintile','4th_quintile','5th_quintile'])"
    ]
   },
   {
@@ -195,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1045,7 +1039,7 @@
        "[1104 rows x 5 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1064,7 +1058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
@@ -1084,7 +1078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1100,7 +1094,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1161,7 +1155,7 @@
        "5th_quintile                                    51583.616755"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1179,7 +1173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1240,7 +1234,7 @@
        "5th_quintile                                        0.621702"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1259,7 +1253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1268,7 +1262,7 @@
        "101474070764.91489"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
