Abandon .pickle for .npy

--- a/Notebooks/technology_matrix.ipynb
+++ b/Notebooks/technology_matrix.ipynb
@@ -4,18 +4,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First, we import the three modules necessary in this notebook."
+    "First, we import the two modules necessary in this notebook."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pymrio\n",
     "import pandas as pd\n",
-    "import pickle"
+    "import numpy as np"
    ]
   },
   {
@@ -23,7 +23,6 @@
    "metadata": {},
    "source": [
     "- pandas and numpy are libraries focused on data analysis\n",
-    "- pickle allows to save and export data produced from notebook to notebook\n",
     "- pymrio is a library that transforms the .CSV files of EXIOBASE into pandas.dataframe, easier to manipulate"
    ]
   },
@@ -126,7 +125,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We then populate that QC grid mix technology according to existing electricity generation sectors of Exiobase. Here we consider that Quebec's grid mix is 99.1% hydro, 0.5% wind, 0.2 petrol and 0.2 biomass."
+    "We then populate that QC grid mix technology according to existing electricity generation sectors of Exiobase. Here we consider that Quebec's grid mix is 99.1% hydro, 0.5% wind, 0.2 petrol and 0.2 biomass (grid mix coming from the ecoinvent3.5 database)."
    ]
   },
   {
@@ -437,17 +436,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We use the pickle library to store the newly extended EXIOBASE version with Quebec included. We will use that pickle in other notebooks to use the matrix we just created here."
+    "We use the npy format to store the newly extended EXIOBASE version with Quebec included. We will use that file in other notebooks to use the matrix we just created here."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('one_matrix_to_rule_them_all.pickle','wb') as f:\n",
-    "    pickle.dump(extended_exio, f)"
+    "np.save('one_matrix_to_rule_them_all.npy', extended_exio)"
    ]
   },
   {
